time added to review

--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -126,11 +126,11 @@
 			<h3 class="bold-font heading-text">Date</h3>
 			<p>
 				<span class="bold-font"><i class="fa fa-clock-o color-blue"></i>&nbsp Start Date & Time:</span>&nbsp
-				<span>{{cartData.duration.fromDt | date : 'longDate'}}</span>
+				<span>{{cartData.duration.fromDt | date : 'MMMM d, y, h:mm:ss a'}}</span>
 			</p>
 			<p>
 				<span class="bold-font"><i class="fa fa-clock-o color-blue"></i>&nbsp End Date & Time:</span>&nbsp
-        <span>{{cartData.duration.toDt| date : 'longDate'}}</span>
+        <span>{{cartData.duration.toDt| date : 'MMMM d, y, h:mm:ss a'}}</span>
 			</p>
 		</div>
 		<!-- devider -->
