--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -291,7 +291,7 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading offers-col">
 				<h3>Sell your Equipment</h3>
 				<div class="line"></div>
-				<p class="desc-text">When you sell your equipment with Noble Iron, you have a whole team of experts working for you – sales, marketing, internet services, customer service, accounting and more. Our all-inclusive service saves you time and money, so you can focus on running your business while we work to get you maximum returns.</p>
+				<p class="desc-text landing-padding-desc">When you sell your equipment with Noble Iron, you have a whole team of experts working for you – sales, marketing, internet services, customer service, accounting and more. Our all-inclusive service saves you time and money, so you can focus on running your business while we work to get you maximum returns.</p>
 				<button class="btn all-btn primary-btn sign_mybtn autowidth" ui-sref="hm.sellEquipment">&nbsp;&nbsp;&nbsp;Sell Now&nbsp;&nbsp;&nbsp;</button>
 			</div>
 		</div>
@@ -323,7 +323,7 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading offers-col">
 				<h3>Our Software</h3>
 				<div class="line"></div>
-				<p class="desc-text">Noble Iron Online is powered by Texada Software’s cloud platform.<br> Texada builds software for equipment rental companies,<br> equipment dealerships, construction companies, contractors,<br> and any construction or industrial equipment user, including mechanics,<br> logistics and service technicians. Texada Software manages the entire equipment lifecycle,<br> including equipment purchasing, rental & sales transactions, inventory location,<br> utilization, maintenance and depreciation tracking, used equipment sales analysis, and inventory replenishment. Texada (toll-free in North America): <span class="color-blue">1-800-361-1233</span></p>
+				<p class="desc-text landing-padding-desc">Noble Iron Online is powered by Texada Software’s cloud platform. Texada builds software for equipment rental companies, equipment dealerships, construction companies, contractors, and any construction or industrial equipment user, including mechanics, logistics and service technicians. Texada Software manages the entire equipment lifecycle, including equipment purchasing, rental & sales transactions, inventory location, utilization, maintenance and depreciation tracking, used equipment sales analysis, and inventory replenishment. Texada (toll-free in North America): <span class="color-blue">1-800-361-1233</span></p>
 				<button class="btn all-btn primary-btn sign_mybtn autowidth" id="contact">Get The Software Now</button>
 			</div>
 		</div>
@@ -439,7 +439,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"></div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 address-col">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-10 address-col">
 				<uib-accordion close-others="true" class="faq-accordion address-accordion">
 					<uib-accordion-group is-open="true">
 						<uib-accordion-heading>
@@ -459,7 +459,8 @@
 							</h4>
 						</uib-accordion-heading>
 						<p class="desc-text">
-							505 Rankin Road Houston, TX 77073
+							505 Rankin Road Houston, TX 77073 <br>
+							Phone: 1-855-767-4424
 						</p>
 					</uib-accordion-group>
 					<uib-accordion-group>
@@ -469,13 +470,14 @@
 							</h4>
 						</uib-accordion-heading>
 						<p class="desc-text">
-							8314 E. Slauson Avenue Pico Rivera, CA 90660 <br>
-							Phone: 1-855-767-4424
+							7B - 291 Woodlawn Road West, Guelph, <br> ON N1H2C8, CANADA  <br>
+							Phone: 1-800-361-1233 (toll-free in North America) <br>
+							+1-519-836-7073 (international)
 						</p>
 					</uib-accordion-group>
 				</uib-accordion>
 			</div>
-			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12"></div>
+			<div class="col-lg-2 col-md-2 hidden-sm col-xs-2"></div>
 		</div>
 	</div>
 </section>
