--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -15,7 +15,7 @@
         <input type="text" placeholder="Site Id">
       </div>
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box manage-search-arrow-box" ng-class="{'search-show': showSearch}">
       <div class="form-control search-div quotes-search searchShow">
         <input type="text" placeholder="Site Id">
       </div>
