--- a/src/app/requests/requests.html
+++ b/src/app/requests/requests.html
@@ -54,30 +54,25 @@
 
 	<!-- service request table -->
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" ng-if="params.serviceRequest">
-		<table class="table quotes-table open-contract-table topmargin">
+		<table class="table quotes-table open-contract-table topmargin hidden-xs">
 			<thead>
 				<tr>
 					<th>Contract</th>
 					<th>Job Site</th>
 					<th>PO</th>
 					<th>Date</th>
-					<th class="hidden-xs"></th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>
 						<a class="invoice-no">12345</a>
-						<p class="visible-xs">
-							<a class="invoice-no view-down view-down-quotation">
-							Process
-						</a>
-						</p>
 					</td>
 					<td>Calcrete Yard</td>
 					<td>Shop</td>
 					<td>MM/DD/YYYY</td>
-					<td class="text-right hidden-xs">
+					<td class="text-right">
 						<a class="invoice-no view-down view-down-quotation">
 							Process
 						</a>
@@ -85,34 +80,54 @@
 				</tr>
 			</tbody>
 		</table>
+		<div class="visible-xs desc-text">
+			<div class="mobile-contracts">
+				<p class="bold-font">
+					Contract
+					<span class="pull-right color-blue normal-font">12345</span>
+				</p>
+				<p class="bold-font">
+					Job Site
+					<span class="pull-right normal-font">Calcrete Yard</span>
+				</p>
+				<p class="bold-font">
+					PO
+					<span class="pull-right normal-font">Shop</span>
+				</p>
+				<p class="bold-font">
+					Date
+					<span class="pull-right normal-font">MM/DD/YYYY</span>
+				</p>
+				<p class="bold-font">
+					<button class="btn all-btn primary-btn sign_mybtn autowidth">
+						Process
+					</button>
+				</p>
+			</div>
+		</div>
 	</div>
 
 	<!-- pickup request table -->
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" ng-if="!params.serviceRequest">
-		<table class="table quotes-table open-contract-table topmargin">
+		<table class="table quotes-table open-contract-table topmargin hidden-xs">
 			<thead>
 				<tr>
 					<th>Contract</th>
 					<th>Job Site</th>
 					<th>PO</th>
 					<th>Date</th>
-					<th class="hidden-xs"></th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>
 						<a class="invoice-no">12345</a>
-						<p class="visible-xs">
-							<a class="invoice-no view-down view-down-quotation">
-							Process
-						</a>
-						</p>
 					</td>
 					<td>Calcrete Yard</td>
 					<td>Shop</td>
 					<td>MM/DD/YYYY</td>
-					<td class="text-right hidden-xs">
+					<td class="text-right">
 						<a class="invoice-no view-down view-down-quotation">
 							Process
 						</a>
@@ -156,5 +171,76 @@
 				</tr>
 			</tbody>
 		</table>
+		<div class="visible-xs desc-text">
+			<div class="mobile-contracts">
+				<p class="bold-font">
+					Contract
+					<span class="pull-right color-blue normal-font">12345</span>
+				</p>
+				<p class="bold-font">
+					Job Site
+					<span class="pull-right normal-font">Calcrete Yard</span>
+				</p>
+				<p class="bold-font">
+					PO
+					<span class="pull-right normal-font">Shop</span>
+				</p>
+				<p class="bold-font">
+					Date
+					<span class="pull-right normal-font">MM/DD/YYYY</span>
+				</p>
+				<p class="bold-font">
+					<button class="btn all-btn primary-btn sign_mybtn autowidth">
+						Process
+					</button>
+				</p>
+			</div>
+			<div class="mobile-contracts">
+				<p class="bold-font">
+					Contract
+					<span class="pull-right color-blue normal-font">12345</span>
+				</p>
+				<p class="bold-font">
+					Job Site
+					<span class="pull-right normal-font">Calcrete Yard</span>
+				</p>
+				<p class="bold-font">
+					PO
+					<span class="pull-right normal-font">Shop</span>
+				</p>
+				<p class="bold-font">
+					Date
+					<span class="pull-right normal-font">MM/DD/YYYY</span>
+				</p>
+				<p class="bold-font">
+					<button class="btn all-btn primary-btn sign_mybtn autowidth">
+						Process
+					</button>
+				</p>
+			</div>
+			<div class="mobile-contracts">
+				<p class="bold-font">
+					Contract
+					<span class="pull-right color-blue normal-font">12345</span>
+				</p>
+				<p class="bold-font">
+					Job Site
+					<span class="pull-right normal-font">Calcrete Yard</span>
+				</p>
+				<p class="bold-font">
+					PO
+					<span class="pull-right normal-font">Shop</span>
+				</p>
+				<p class="bold-font">
+					Date
+					<span class="pull-right normal-font">MM/DD/YYYY</span>
+				</p>
+				<p class="bold-font">
+					<button class="btn all-btn primary-btn sign_mybtn autowidth">
+						Process
+					</button>
+				</p>
+			</div>
+		</div>
 	</div>
 </div>
